--- a/wordscramble.html
+++ b/wordscramble.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id='container'>
-	<div ng-controller='wordController' ng-keypress="keyPress($event.keyCode)">
+	<div ng-controller='wordController'>
 		<h2>{{details.word}}<h2>
 		<table>
 			<tr>
