--- a/wordscramble.html
+++ b/wordscramble.html
@@ -11,7 +11,9 @@
 		<h2>{{details.word}}<h2>
 		<table>
 			<tr>
-				<td class='letter-blocks' ng-repeat="letter in letters" ng-hide='letter.used'><span class='letters'>{{letter.letter}}</span><td>
+				<td class='letter-blocks' ng-repeat="letter in letters" ng-hide='letter.used'
+				bn-log-dom-creation="With"
+				><span class='letters'>{{letter.letter}}</span><td>
 			</tr>
 		</table>
 	</div>
