--- a/wordscramble.html
+++ b/wordscramble.html
@@ -1,22 +1,11 @@
-<html ng-app='myApp'>
-<head>
-	<title>Word Scramble</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-	<script type="text/javascript" src='app.js'></script>
-	<link rel='stylesheet' href='style.css'>
-</head>
-<body>
-	<div id='container'>
-	<div ng-controller='wordController'>
-		<h2>{{details.word}}<h2>
-		<table>
-			<tr>
-				<td class='letter-blocks' ng-repeat="letter in letters" ng-hide='letter.used'
+<div class='wordscramble'>
+	<h2>{{details.word}}<h2>
+	<table>
+		<tr>
+			<td class='letter-blocks' ng-repeat="letter in letters" ng-hide='letter.used'
 				bn-log-dom-creation="With"
-				><span class='letters'>{{letter.letter}}</span><td>
-			</tr>
-		</table>
-	</div>
-	</div>
-</body>
-</html>
+				><span class='letters'>{{letter.letter}}</span>
+			<td>
+		</tr>
+	</table>
+</div>
