--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Word Scramble</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-	<script type="text/javascript" src='app.js'></script>
+	<script type="text/javascript" src='wordScramble.js'></script>
 	<link rel='stylesheet' href='style.css'>
 </head>
 <body>
