--- a/index.html
+++ b/index.html
@@ -2,20 +2,14 @@
 <head>
 	<title>Word Scramble</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js'></script>
+	<script type='text/javascript' src='app.js'></script>
 	<script type="text/javascript" src='wordScramble.js'></script>
 	<link rel='stylesheet' href='style.css'>
+	<script type = "text/javascript" src="/socket.io/socket.io.js"></script>
 </head>
 <body>
-	<div ng-controller='wordScramble'>
-	<h2>{{details.word}}<h2>
-	<table>
-		<tr>
-			<td class='letter-blocks' ng-repeat="letter in letters" ng-hide='letter.used'
-				bn-log-dom-creation="With"
-				><span class='letters'>{{letter.letter}}</span>
-			<td>
-		</tr>
-	</table>
-</div>
+	<div ng-view="">
+	</div>
 </body>
 </html>
