--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js'></script>
 	<script type='text/javascript' src='app.js'></script>
 	<script type="text/javascript" src='wordScramble.js'></script>
+	<script type='text/javascript' src='wordFactory.js'></script>
 	<link rel='stylesheet' href='style.css'>
 	<script type = "text/javascript" src="/socket.io/socket.io.js"></script>
 </head>
